# ethereum-indexer

./: Cargo.toml  README.md  quick_test.sh
crates/indexer/: Cargo.toml
crates/indexer-cli/: Cargo.toml
crates/indexer-server/: Cargo.toml
crates/indexer-server/src/: handlers.rs  main.rs  types.rs
crates/indexer-server/src/handlers/: balance.rs  block.rs  logs.rs  mod.rs  ping.rs  receipt.rs  rpc_info.rs  trace_filter.rs  transaction.rs
crates/indexer/src/: exec.rs  lib.rs  order.rs  pool.rs  providers.rs
crates/indexer/src/api/: balance.rs  block_time.rs  engine.rs  mod.rs  trace_filter.rs  tx_by_hash.rs  tx_receipt.rs
crates/indexer/src/api/erc20/: balance.rs
crates/indexer/src/api/eth/: call.rs  get_balance.rs  get_block_by_number.rs  get_logs.rs  mod.rs
crates/indexer/src/api/trace/: filter.rs
crates/indexer/src/contracts/: erc20.rs  mod.rs
crates/indexer/src/methods/: mod.rs  trace_filter.rs  tx_by_hash.rs  tx_receipt.rs
crates/indexer/src/methods/eth/: get_balance.rs  get_block_by_number.rs  get_logs.rs  get_transaction_by_hash.rs  get_transaction_receipt.rs  mod.rs
crates/indexer/src/methods/trace/: filter.rs
docs/: ARCHITECTURE.md  CLI_GUIDE.md  SERVER_API.md
front/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
front/app/: globals.css  layout.tsx  page.tsx
front/components/: debug-drawer.tsx  filter-chip.tsx  json-viewer.tsx  (+3 more)
scripts/: balance_erc20_query.sh  balance_query.sh  block_bench.sh  erc20_token_transfers.sh  erc20_wallet_transfers.sh  general_logs.sh  logs_test.sh  quick_test.sh  setup.sh  speed_test.sh
(+11 files in other folders)
