[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
alloy = { version = "1.0.35", features = ["provider-http", "rpc-types-trace", "rpc-types-eth", "reqwest"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.83"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0"