[package]
name = "indexer-server"
version.workspace = true
edition.workspace = true

[dependencies]
indexer = { path = "../indexer" }
axum = "0.8.4"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
alloy.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"