[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }